--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@300&family=Poppins&family=Ysabeau:wght@300&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <style>
         #main {
-            background-color: black;
-            height: 95.9vh;
+            height: 100vh;
+            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("bg2.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
 
         #Nav {
-            background-color: #8335FD;
+            background-color: black;
         }
 
         .nav-color {
@@ -27,8 +29,45 @@
             font-family: 'Manrope', sans-serif;
             font-size: 17px;
         }
-        .nav-color:hover{
-            text-shadow: 2px 2px 8px #0F0742;
+
+        .nav-color:hover {
+            text-shadow: 9px 9px 10px #8335FD;
+            color: #8335FD;
+        }
+
+        .my-intro {
+            color: white;
+            font-family: 'Abel', sans-serif;
+            font-size: 35px;
+        }
+        .my-intro-sub1{
+            text-shadow: 8px 8px 8px #8335FD;
+            animation: my-anim 2s infinite;
+        }
+        @keyframes my-anim {
+            25%{
+                text-shadow: 4px 4px 8px #0F0742;
+            }
+
+            50%{
+                text-shadow: 4px 4px 8px #8335FD;
+            }
+
+            75%{
+                text-shadow: 4px 4px 8px #ffffff;  
+            }
+
+            100%{
+                text-shadow: 4px 4px 8px #C2C1C9;  
+            }
+        }
+        .cv-button{
+            color: white;
+            font-size: 25px;
+            
+        }
+        .cv-button:hover{
+            box-shadow: 5px 5px 10px #8335FD;
         }
     </style>
 </head>
@@ -65,8 +104,17 @@
             </div>
         </div>
     </nav>
+    
     <div class="container-fluid" id="main">
-        .
+        <div class="row my-intro">
+            <div class="col-6 my-intro-sub1"><br><br><br></div>
+            <div class="col-6"></div>
+        </div>  
+
+        <div class="row my-intro">
+            <div class="col-md-6 my-intro-sub1 text-center">Hi! <br> I am Madhav Dhokiya <br> Web Developer <br> <button class="btn cv-button">Download CV</button></button></butt></div>
+            <div class="col-md-6 text-center"><img src="my.jpg" class="rounded-circle img-fluid" height="400" width="400"></div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
