--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
         #main {
             height: 100vh;
-            background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("bg2.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg3.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -40,34 +44,54 @@
             font-family: 'Abel', sans-serif;
             font-size: 35px;
         }
-        .my-intro-sub1{
+
+        .my-font {
+            font-family: 'Abel', sans-serif;
+        }
+
+        .my-intro-sub1 {
             text-shadow: 8px 8px 8px #8335FD;
             animation: my-anim 2s infinite;
         }
+
         @keyframes my-anim {
-            25%{
+            25% {
                 text-shadow: 4px 4px 8px #0F0742;
             }
 
-            50%{
+            50% {
                 text-shadow: 4px 4px 8px #8335FD;
             }
 
-            75%{
-                text-shadow: 4px 4px 8px #ffffff;  
+            75% {
+                text-shadow: 4px 4px 8px #ffffff;
             }
 
-            100%{
-                text-shadow: 4px 4px 8px #C2C1C9;  
+            100% {
+                text-shadow: 4px 4px 8px #C2C1C9;
             }
         }
-        .cv-button{
+
+        .cv-button {
             color: white;
             font-size: 25px;
-            
+
         }
-        .cv-button:hover{
+
+        .cv-button:hover {
             box-shadow: 5px 5px 10px #8335FD;
+        }
+
+        .gh-btn {
+            color: black;
+        }
+
+        .gh-btn:hover {
+            box-shadow: 3px 3px 9px #8335FD;
+        }
+
+        .edu {
+            font-size: 18px;
         }
     </style>
 </head>
@@ -86,13 +110,13 @@
                         <a class="nav-link nav-color" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-color" href="#">About</a>
+                        <a class="nav-link nav-color" href="#aboutMe">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-color" href="#">Education</a>
+                        <a class="nav-link nav-color" href="#education">Education</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-color" href="#">Projects</a>
+                        <a class="nav-link nav-color" href="#education">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-color" href="#">Skills</a>
@@ -104,16 +128,93 @@
             </div>
         </div>
     </nav>
-    
+
     <div class="container-fluid" id="main">
         <div class="row my-intro">
-            <div class="col-6 my-intro-sub1"><br><br><br></div>
+            <div class="col-6 my-intro-sub1"><br><br></div>
             <div class="col-6"></div>
-        </div>  
+        </div>
 
         <div class="row my-intro">
-            <div class="col-md-6 my-intro-sub1 text-center">Hi! <br> I am Madhav Dhokiya <br> Web Developer <br> <button class="btn cv-button">Download CV</button></button></butt></div>
-            <div class="col-md-6 text-center"><img src="my.jpg" class="rounded-circle img-fluid" height="400" width="400"></div>
+            <div class="col-md-6 my-intro-sub1 text-center">Hi! <br> I am Madhav Dhokiya <br> Web Developer <br> <button
+                    class="btn cv-button">Download CV</button></button></butt>
+            </div>
+            <div class="col-md-6 text-center"><img src="my.jpg" class="rounded-circle img-fluid" height="350" width="400"></div>
+        </div>
+    </div>
+    <br>
+    <div class="container-fluid" id="aboutMe">
+        <h2 class="text-center my-font">About Me</h2> <br>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card border-0" style="width: 100%;">
+                    <div class="card-body edu">
+                        <h5 class="card-title">Myself Madhav Dhokiya,</h5>
+                        <p class="card-text">Hello! I am a college student pursuing a degree in computer engineering at
+                            Dharmsinh Desai University Nadiad. My name is Madhav Dhokiya, and I am excited to share a
+                            little bit about myself with you. As someone who has always been fascinated by technology.
+                            In my free time, I enjoy exploring new technologies and experimenting with programming
+                            languages. Throughout my academic career, I have been fortunate enough to have had the
+                            opportunity to work on a variety of projects related to computer engineering. As I move
+                            forward in my studies, I am eager to continue learning and exploring new areas of computer
+                            engineering.</p>
+                        <a href="https://github.com/Dhokiya-Madhav" class="btn gh-btn">Github</a>
+                        <a href="https://www.linkedin.com/in/madhav-dhokiya-10a59a21a/" class="btn gh-btn">Linkedin</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6"><img src="info.png" class="rounded-circle" height="100%" width="100%"></div>
+        </div>
+    </div>
+    <br>
+    <hr>
+    <div class="container-fluid" id="education">
+        <div class="row">
+            <h2 class="my-font">
+                <div class="col-12 text-center">Education -- Projects</div>
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card" style="width: 100%;">
+                    <div class="card-body edu">
+                        <p class="card-text">
+                        <ul>
+                            <li>Dharmsinh Desai University, Nadiad</li>
+                            <h6>Degree, Computer Engineering</h6>
+                            <h6>2021 - 2024</h6>
+                            <hr>
+                            <li>Government Polytechnic, Porbandar</li>
+                            <h6>Diploma, Computer Engineering</h6>
+                            <h6>2018 - 2021</h6>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card" style="width: 100%;">
+                    <div class="card-body edu">
+                        <p class="card-text">
+                        <ul>
+                            <li>Movie Rating System</li>
+                            <h6>Technology:- MERN stack</h6>
+                            <h6>A movie rating web application is a platform where users can browse movies, view their
+                                ratings, and leave their own reviews or ratings for others to see.</h6>
+                            <h6><a href="https://github.com/Dhokiya-Madhav/Movie-Rating_MERN">Github</a></h6>
+                            <hr>
+                            <li>ICWIM [Initiative To Convert Waste Into Money]</li>
+                            <h6>Technology:- MERN stack</h6>
+                            <h6>This project is aimed at promoting cleanliness and environmental sustainability in India
+                                through a waste management system. It involves collecting, sorting, and submitting waste
+                                to the authorities while also providing tax relief for users who participate.</h6>
+                                <h6><a href="https://github.com/Dhokiya-Madhav/ICWIM">Github</a></h6>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
