Skills section added

--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
             <div class="col-md-6 my-intro-sub1 text-center">Hi! <br> I am Madhav Dhokiya <br> Web Developer <br> <button
                     class="btn cv-button">Download CV</button></button></butt>
             </div>
-            <div class="col-md-6 text-center"><img src="my.jpg" class="rounded-circle img-fluid" height="350" width="400"></div>
+            <div class="col-md-6 text-center"><img src="my.jpg" class="rounded-circle img-fluid" height="350"
+                    width="400"></div>
         </div>
     </div>
     <br>
@@ -193,6 +194,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="col-md-6">
                 <div class="card" style="width: 100%;">
                     <div class="card-body edu">
@@ -209,7 +211,62 @@
                             <h6>This project is aimed at promoting cleanliness and environmental sustainability in India
                                 through a waste management system. It involves collecting, sorting, and submitting waste
                                 to the authorities while also providing tax relief for users who participate.</h6>
-                                <h6><a href="https://github.com/Dhokiya-Madhav/ICWIM">Github</a></h6>
+                            <h6><a href="https://github.com/Dhokiya-Madhav/ICWIM">Github</a></h6>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <hr>
+    <div class="container-fluid justify-content-center">
+        <h2 class="text-center my-font">Skills</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card" style="width: 100%;">
+                    <div class="card-body edu">
+                        <p class="card-text">
+                        <ul>
+                            <li>Languages</li>
+                            <h6>C++</h6>
+                            <h6>Java</h6>
+                            <h6>Javascript</h6>
+                            <h6>HTML</h6>
+                            <h6>CSS</h6>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card" style="width: 100%;">
+                    <div class="card-body edu">
+                        <p class="card-text">
+                        <ul>
+                            <li>Framework</li>
+                            <h6>.NET Framework</h6>
+                            <h6>Bootstrap</h6>
+                            <h6>React (Library)</h6>
+                            <h6>Node.js</h6>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card" style="width: 100%;">
+                    <div class="card-body edu">
+                        <p class="card-text">
+                        <ul>
+                            <li>Tools</li>
+                            <h6>Visual Studio Code</h6>
+                            <h6>Visual Studio</h6>
+                            <h6>Postman</h6>
+                            <h6>NetBeans</h6>
                         </ul>
                         </p>
                     </div>
