--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="col-md-6">
                 <div class="card border-0" style="width: 100%;">
                     <div class="card-body edu">
-                        <h5 class="card-title">Myself Madhav Dhokiya,</h5>
+                        <h5 class="ca
                         <p class="card-text">Hello! I am a college student pursuing a degree in computer engineering at
                             Dharmsinh Desai University Nadiad. My name is Madhav Dhokiya, and I am excited to share a
                             little bit about myself with you. As someone who has always been fascinated by technology.
