--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         #main {
             height: 100vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg3.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bg4.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -47,6 +47,7 @@
 
         .my-font {
             font-family: 'Abel', sans-serif;
+            font-size: 30px;
         }
 
         .my-intro-sub1 {
@@ -139,7 +140,7 @@
             <div class="col-md-6 my-intro-sub1 text-center">Hi! <br> I am Madhav Dhokiya <br> Web Developer <br> <button
                     class="btn cv-button">Download CV</button></button></butt>
             </div>
-            <div class="col-md-6 text-center"><img src="my.jpg" class="rounded-circle img-fluid" height="350"
+            <div class="col-md-6 text-center"><img src="my2.png" class="rounded-circle img-fluid" height="350"
                     width="400"></div>
         </div>
     </div>
@@ -173,7 +174,7 @@
     <div class="container-fluid" id="education">
         <div class="row">
             <h2 class="my-font">
-                <div class="col-12 text-center">Education -- Projects</div>
+                
             </h2>
         </div>
         <div class="row">
@@ -181,12 +182,13 @@
                 <div class="card" style="width: 100%;">
                     <div class="card-body edu">
                         <p class="card-text">
+                        <p class="card-body my-font"><b>Education</b></p>
                         <ul>
-                            <li>Dharmsinh Desai University, Nadiad</li>
+                            <li><b>Dharmsinh Desai University, Nadiad</b></li>
                             <h6>Degree, Computer Engineering</h6>
                             <h6>2021 - 2024</h6>
                             <hr>
-                            <li>Government Polytechnic, Porbandar</li>
+                            <li><b>Government Polytechnic, Porbandar</b></li>
                             <h6>Diploma, Computer Engineering</h6>
                             <h6>2018 - 2021</h6>
                         </ul>
@@ -199,14 +201,15 @@
                 <div class="card" style="width: 100%;">
                     <div class="card-body edu">
                         <p class="card-text">
+                        <p class="card-body my-font"><b>Projects</b></p>
                         <ul>
-                            <li>Movie Rating System</li>
+                            <li><b>Movie Rating System</b></li>
                             <h6>Technology:- MERN stack</h6>
                             <h6>A movie rating web application is a platform where users can browse movies, view their
                                 ratings, and leave their own reviews or ratings for others to see.</h6>
                             <h6><a href="https://github.com/Dhokiya-Madhav/Movie-Rating_MERN">Github</a></h6>
                             <hr>
-                            <li>ICWIM [Initiative To Convert Waste Into Money]</li>
+                            <li><b>ICWIM [Initiative To Convert Waste Into Money]</b></li>
                             <h6>Technology:- MERN stack</h6>
                             <h6>This project is aimed at promoting cleanliness and environmental sustainability in India
                                 through a waste management system. It involves collecting, sorting, and submitting waste
