--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <p class="card-body my-font"><b>Education</b></p>
                         <ul>
                             <li><b>Dharmsinh Desai University, Nadiad</b></li>
-                            <h6>Degree, Computer Engineering</h6>
+                            <h6>BTECH , Computer Engineering</h6>
                             <h6>2021 - 2024</h6>
                             <hr>
                             <li><b>Government Polytechnic, Porbandar</b></li>
